--- a/src/Modules/SimplCommerce.Module.PaymentERede/wwwroot/admin/erede/erede-config-form.html
+++ b/src/Modules/SimplCommerce.Module.PaymentERede/wwwroot/admin/erede/erede-config-form.html
@@ -10,30 +10,56 @@
                 </ul>
             </div>
             <div class="form-group">
-                <label class="col-sm-2 control-label">{{::vm.translate.get('Public Key')}}</label>
-                <div class="col-sm-10">
-                    <input name="name" ng-model="vm.eredeConfig.publicKey" class="form-control" />
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">{{::vm.translate.get('Private Key')}}</label>
-                <div class="col-sm-10">
-                    <input name="name" ng-model="vm.eredeConfig.privateKey" class="form-control" />
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="col-sm-2 control-label">{{::vm.translate.get('Merchaint Id')}}</label>
-                <div class="col-sm-10">
-                    <input name="name" ng-model="vm.eredeConfig.merchantId" class="form-control" />
-                </div>
-            </div>
-            <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                     <div class="checkbox">
                         <label>
-                            <input type="checkbox" ng-model="vm.eredeConfig.isProduction">{{::vm.translate.get('Production Environment')}}
+                            <input type="checkbox" ng-model="vm.eredeConfig.sandbox">{{::vm.translate.get('Sandbox?')}}
                         </label>
                     </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">{{::vm.translate.get('Rede PV')}}</label>
+                <div class="col-sm-10">
+                    <input name="name" ng-model="vm.eredeConfig.redePV" class="form-control" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">{{::vm.translate.get('Rede Token')}}</label>
+                <div class="col-sm-10">
+                    <input name="name" ng-model="vm.eredeConfig.redeToken" class="form-control" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">{{::vm.translate.get('Rede Soft Descriptor')}}</label>
+                <div class="col-sm-10">
+                    <input name="name" ng-model="vm.eredeConfig.softDescriptor" class="form-control" />
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">{{::vm.translate.get('Quantas parcelas serão permitidas?')}}</label>
+                <div class="col-sm-10">
+                    <select class="form-control" ng-model="vm.eredeConfig.qtdeParcelas">
+                        <option>0</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                        <option>6</option>
+                        <option>7</option>
+                        <option>8</option>
+                        <option>9</option>
+                        <option>10</option>
+                        <option>11</option>
+                        <option>12</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="col-sm-2 control-label">{{::vm.translate.get('Valor mínimo para parcelamento')}}</label>
+                <div class="col-sm-10">
+                    <input name="name" ng-model="vm.eredeConfig.valorMinimoParcelamento" class="form-control" />
                 </div>
             </div>
             <div class="form-group">
